# RustShareX

./: Cargo.toml
src/: main.rs  share_x_objects.rs
