[package]
name = "rust_share_x"
version = "0.1.0"
authors = ["turulix <tigga01@online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.5"
parking_lot = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11.5"
infer = "0.3.2"
tokio = { version = "0.2", features = ["macros"] }
rand = "0.8.0"

[dependencies.mongodb]
version = "1.1.1"
default-features = false
features = ["async-std-runtime"]